--- a/OneBeyond.Studio.Core.Mediator/OneBeyond.Studio.Core.Mediator.csproj
+++ b/OneBeyond.Studio.Core.Mediator/OneBeyond.Studio.Core.Mediator.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" />
     <PackageReference Include="Ensure.That" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
   </ItemGroup>
