--- a/src/OneBeyond.Studio.Domain.SharedKernel/OneBeyond.Studio.Domain.SharedKernel.csproj
+++ b/src/OneBeyond.Studio.Domain.SharedKernel/OneBeyond.Studio.Domain.SharedKernel.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\OneBeyond.Studio.Core.Mediator\OneBeyond.Studio.Core.Mediator.csproj" />
     <ProjectReference Include="..\OneBeyond.Studio.Crosscuts\OneBeyond.Studio.Crosscuts.csproj" />
   </ItemGroup>
 
